unpackaged/main/default/objects/TestObj__c/fields/Checked_Field__c.field-meta.xml
<CustomField>
    <fullName>Checked_Field__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Checked Field</label>
    <type>Checkbox</type>
</CustomField>