unpackaged/main/default/objects/TestObj__c/fields/Deposit_2__c.field-meta.xml
<CustomField>
    <fullName>Deposit_2__c</fullName>
    <label>Deposit 2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>