unpackaged/main/default/objects/TestObj__c/fields/Muilt_iSelect_PickList__c.field-meta.xml
<CustomField>
    <fullName>Muilt_iSelect_PickList__c</fullName>
    <defaultValue>'Ace'</defaultValue>
    <label>Muilt iSelect PickList</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ace</fullName>
            </value>
            <value>
                <fullName>Bravo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>