unpackaged/main/default/objects/TestObj__c/fields/Single_Select_Picklist__c.field-meta.xml
<CustomField>
    <fullName>Single_Select_Picklist__c</fullName>
    <label>Single Select Picklist</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ace</fullName>
            </value>
            <value>
                <fullName>Bravo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>