unpackaged/main/default/objects/TestObj__c/fields/Unchecked_Field__c.field-meta.xml
<CustomField>
    <fullName>Unchecked_Field__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Unchecked Field</label>
    <type>Checkbox</type>
</CustomField>