unpackaged/main/default/objects/TestObj__c/validationRules/cannot_fill_both_deposit_fields.validationRule-meta.xml
<ValidationRule>
    <fullName>cannot_fill_both_deposit_fields</fullName>
    <active>true</active>
    <errorConditionFormula>AND(!ISBLANK(Deposit__c), !ISBLANK(Deposit_2__c))</errorConditionFormula>
    <errorMessage>Only one deposit field can be filled in!</errorMessage>
</ValidationRule>